# doc-page-extractor

./: .gitignore  README.md  README_zh-CN.md  build.py  check_cuda.py  download.py  lint.py  main.py  pyproject.toml  requirements.txt  setup.py  table.py  test.py
.github/workflows/: build.yaml  build.yml  merge-build.yaml  pr-check.yaml
doc_page_extractor/: __init__.py  abort.py  check_env.py  clipper.py  extraction_context.py  extractor.py  injection.py  latex.py  layout_order.py  lazy_loader.py  main.py  model.py  models.py  ocr.py  ocr_corrector.py  order.py  order2.py  overlap.py  parser.py  plot.py  raw_optimizer.py  rectangle.py  redacter.py  resource_locks.py  rotation.py  table.py  types.py  unimernet.py  utils.py
doc_page_extractor/data/unimernet/: demo.yaml
doc_page_extractor/onnxocr/: __init__.py  cls_postprocess.py  db_postprocess.py  onnx_paddleocr.py  predict_cls.py  predict_rec.py  predict_system.py
docs/: DEVELOPMENT.md
scripts/: setup.sh  sync-struct-eqtable.sh
tests/: test_formula.py  test_history_bus.py  test_parser.py  test_pix2tex.py  utils.py
